# django-bookstore-evolution

./: LICENSE  README.md  pyproject.toml
bookstore/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  views.py
core/management/commands/: create_sample_01.py
core/migrations/: 0001_initial.py
