[project]
name = "django-bookstore-evolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-schema-graph>=3.1.0",
    "djangorestframework>=3.16.1",
    "markdown>=3.9",
    "ruff>=0.13.1",
]
