[project]
name = "django-bookstore-evolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-schema-graph>=3.1.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "drf-yasg>=1.21.10",
    "flex>=6.14.1",
    "markdown>=3.9",
    "redoc>=0.2.3",
    "ruff>=0.13.1",
]
